# routes/cinema-route.go
@@ -10,5 +10,5 @@ func cinemaRoutes(app *core.BaseApp, group *echo.Group) {
 	cinemaController := controllers.CinemaController{App: app}
 	group.POST("cinemas", cinemaController.CreateCinemaHandler)
 	group.POST("cinemas/:id/cinemahall", cinemaController.CreateCinemaHallHandler)
-	group.POST("cinemas/:id/cinemahall/:cinemahallId", cinemaController.CreateCinemaSeatHandler)
+	group.POST("cinemas/:id/cinemahall/:cinemahallId/seat", cinemaController.CreateCinemaSeatHandler)
 }
